Attempt using dearmor

--- a/laravel/templates/Dockerfile
+++ b/laravel/templates/Dockerfile
@@ -4,8 +4,7 @@ FROM mcr.microsoft.com/devcontainers/php:${base_image}
 ARG extensions
 
 # Add Yarn key to stop apt update failing
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg -o /usr/share/keyrings/yarn-keyring.asc \
-    && sed -i '1s;^deb;deb [signed-by=/usr/share/keyrings/yarn-keyring.asc];' /etc/apt/sources.list.d/yarn.list
+RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | gpg --dearmor > /usr/share/keyrings/yarn-archive-keyring.gpg
 
 # Install MariaDB client
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
