Disable fail fast

--- a/.github/workflows/docker-builder.yml
+++ b/.github/workflows/docker-builder.yml
@@ -51,7 +51,8 @@ jobs:
     name: 'Dockerfile.${{ matrix.configuration }}'
 
     strategy:
-      matrix: 
+      fail-fast: false
+      matrix:
         configuration: ${{ fromJson(needs.matrix.outputs.configurations) }}
 
     steps:
