Updated install commands for new install script

--- a/deno/templates/Dockerfile
+++ b/deno/templates/Dockerfile
@@ -5,4 +5,4 @@ RUN curl -fsSL https://deno.land/install.sh | sh -s ${deno_version}
 
 # Preinstall Code Server for user 'vscode' to speed up first run
 COPY scripts/install-vs-code-server.sh /tmp/install-vs-code-server.sh
-RUN su vscode -c "/tmp/install-vs-code-server.sh"
+RUN su vscode -c "/tmp/install-vs-code-server.sh $(cat /tmp/arch)"
