--- a/laravel/templates/Dockerfile
+++ b/laravel/templates/Dockerfile
@@ -12,6 +12,8 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get install -y mariadb-client \
     # Cypress dependencies
     libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libnss3 libxss1 libasound2 libxtst6 xauth xvfb \
+    # Sodium dependencies
+    libsodium-dev \
     && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
 # Install specified extensions
